--- a/danielklopper.com/scss/modules/_typography.scss
+++ b/danielklopper.com/scss/modules/_typography.scss
@@ -3,11 +3,11 @@
 
 @font-face {
     font-family: 'Begum-Regular';
-    src: url('../fonts/adelle_light-webfont.eot');
-    src: url('../fonts/adelle_light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/adelle_light-webfont.woff') format('woff'),
-         url('../fonts/adelle_light-webfont.ttf') format('truetype'),
-         url('../fonts/adelle_light-webfont.svg#AdelleLight') format('svg');
+    src: url('../fonts/Begum-Regular.eot');
+    src: url('../fonts/Begum-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Begum-Regular-webfont.woff') format('woff'),
+         url('../fonts/Begum-Regular-webfont.ttf') format('truetype'),
+         url('../fonts/Begum-Regular-webfont.svg#Begum-Regular') format('svg');
     font-weight: normal;
     font-style: normal; 
 }
