--- a/danielklopper.com/scss/main.scss
+++ b/danielklopper.com/scss/main.scss
@@ -47,9 +47,10 @@ h1, h2, h3, h4, h5, h6 , p{
 
 p { 
 	margin: 0 0 50px 0; 
-	font-family: "Begum-Regular" , -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
+	font-family: 'Begum-Regular',-apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
 	font-weight: normal;
-	// letter-spacing: 0;
+	// letter-spacing:0;
+	// font-weight:600;
 
 }
 .small{ font-size: 16px; margin: 0 0 20px 0; line-height:24px; font-weight:300; i {font-style:normal;}}
